force-app/main/default/objects/Sales_Call_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Call Trackings</relationshipLabel>
    <relationshipName>Sales_Call_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>