force-app/main/default/objects/Sales_Call_Tracking__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to Benefit Order for Benefits side tracking</description>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Sales Call Trackings</relationshipLabel>
    <relationshipName>Sales_Call_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>