force-app/main/default/objects/Sales_Call_Tracking__c/fields/Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_End_Time__c</fullName>
    <description>Captures call end time - from PureCloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>