force-app/main/default/objects/Sales_Call_Tracking__c/fields/Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Time__c</fullName>
    <description>Captures call start time - from PureCloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>