force-app/main/default/objects/Sales_Call_Tracking__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Captures call type info - from PureCloud.</description>
    <label>Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>