force-app/main/default/objects/Sales_Call_Tracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to Case for Benefits side bar tracking</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sales Call Trackings</relationshipLabel>
    <relationshipName>Sales_Call_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>