force-app/main/default/objects/Sales_Call_Tracking__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>