force-app/main/default/objects/Sales_Call_Tracking__c/fields/Genesys_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Integration_Id__c</fullName>
    <description>Captures Genesys conversation id - from PureCloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Genesys Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>