force-app/main/default/objects/Sales_Call_Tracking__c/fields/Is_PureCloud_Call__c.field-meta.xml
<CustomField>
    <fullName>Is_PureCloud_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked if call was done through PureCloud.</description>
    <label>Is PureCloud Call</label>
    <type>Checkbox</type>
</CustomField>