force-app/main/default/objects/Sales_Call_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Call Trackings</relationshipLabel>
    <relationshipName>Sales_Call_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>