force-app/main/default/objects/Sales_Call_Tracking__c/fields/Reason_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Call__c</fullName>
    <label>Reason for Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro call</fullName>
            </value>
            <value>
                <fullName>OE questions</fullName>
            </value>
            <value>
                <fullName>Incomplete OE</fullName>
            </value>
            <value>
                <fullName>Benefits questions</fullName>
            </value>
            <value>
                <fullName>Setup error - restart OE</fullName>
            </value>
            <value>
                <fullName>Unresponsive ER</fullName>
            </value>
            <value>
                <fullName>ER requested benefits change</fullName>
            </value>
            <value>
                <fullName>Request for documents/info</fullName>
            </value>
            <value>
                <fullName>Plan review reminder - First attempt</fullName>
            </value>
            <value>
                <fullName>Plan review reminder - Second attempt</fullName>
            </value>
            <value>
                <fullName>Enrollment review reminder - First attempt</fullName>
            </value>
            <value>
                <fullName>Enrollment review reminder - Second attempt</fullName>
            </value>
            <value>
                <fullName>Customer requested scheduled call</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>