force-app/main/default/objects/Sales_Call_Tracking__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>