force-app/main/default/objects/Sales_Call_Tracking__c/fields/Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>Task_Notes__c</fullName>
    <description>Captures task notes from actual task - when task logged through side bar.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>