force-app/main/default/objects/Sales_Call_Tracking__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <description>Captures task status - when task is created through side bar.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>