force-app/main/default/objects/Sales_Call_Tracking__c/fields/Voicemail_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Start_Time__c</fullName>
    <description>Captures VoiceMail start time in purecloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Voicemail Start Time</label>
    <type>DateTime</type>
</CustomField>