force-app/main/default/objects/Sales_Call_Tracking__c/recordTypes/Benefits_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Benefits_Onboarding</fullName>
    <active>true</active>
    <label>Benefits Onboarding</label>
</RecordType>