force-app/main/default/objects/Sales_Call_Tracking__c/recordTypes/Change.recordType-meta.xml
<RecordType>
    <fullName>Change</fullName>
    <active>true</active>
    <label>Change</label>
</RecordType>