force-app/main/default/objects/Sales_Call_Tracking__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <label>Sales</label>
</RecordType>